# Daimayuan-Zhousai-Problem

./: CMakeLists.txt  DZP Problem版本.xmind  Note.md  README.md  VSCode配置插件！.md  [R5E]余数和(40分TLE).cpp  做题情况.md  必备写代码！.md  排序Inportant!.md  自述.md  题解.md
R1/: [R1A]最大奇数.cpp  [R1B]砖块覆盖.cpp  [R1C]区间求和.cpp
R10/: [R10A]比大小.cpp  [R10B]平方数.cpp
R11/: [R11A]出现奇数次的偶数.cpp  [R11B]前三小.cpp
R12/: [R12A]箭头.cpp  [R12B]减法游戏.cpp  [R12C]训练指令.cpp  [R12D]二维gcd和3(50TLE).cpp  [R12D]二维gcd和3.cpp
R13/: [R13A]连续下降.cpp  [R13B]n位数.cpp  [R13C]消除游戏.cpp  [R13D]支架.cpp
R14/: [R14A]感叹句!.cpp  [R14B]向前看2.cpp  [R14D]训练指令2(40分RE).cpp  [R14D]训练指令2.cpp
R15/: [R15A]现在几点.cpp  [R15B]最近点.cpp  [R15C]订单处理.cpp  [R15D]二维异或和(20分TLE).cpp
R16/: [R16A]总分.cpp  [R16B]两个按钮.cpp
R17/: [R17A]谁在装弱.cpp  [R17B]最多连胜.cpp  [R17C]班服~.cpp
R18/: [R18A]挑食.cpp  [R18B]项链.cpp  [R18C]支架2.cpp
R19/: [R19A]特殊卡片.cpp  [R19B]乘法.cpp
R2/: [R2A]三人组队.cpp  [R2B]向前看.cpp  [R2C]三元组(30分TLE).cpp  [R2C]三元组.cpp  [R2D]倍数问题(20分TLE).cpp  [R2D]倍数问题.cpp
R20/: [R20A]题号查询.cpp  [R20B]最佳搭档.cpp  [R20C]两两不同.cpp
R21/: [R21C]拼图游戏.cpp
R22/: [R22C]奇偶偶奇(50分TLE).cpp  [R22C]奇偶偶奇(80分WA).cpp
R23/: [R23B]翻转数位.cpp
R25/: [R25B]Ferrers 图.cpp  [R25C]有序对(40分TLE).cpp
R27/: [R27C]服务窗口.cpp
R3/: [R3A]出现次数统计.cpp  [R3B]k次幂求和.cpp
R31/: [R31A]校验码.cpp  [R31B]删除数字.cpp  [R31C]交换小球.cpp
R32/: [R32A]染色游戏.cpp  [R32B]优美数组.cpp  [R32C]奇偶更新().cpp  [R32C]奇偶更新(0分RE).cpp
R33/: [R33A]数字求和.cpp  [R33B]中位数.cpp  [R33B]中位数None.cpp
R34/: [R34A]FizzBuzz 游戏.cpp  [R34B]括号回文串.cpp
R35/: [R35A]','变‘.’.cpp  [R35B]近回文数.cpp  [R35C]平均数(10分WA+TLE).cpp
R36/: [R36A]出题组1.cpp  (+1 more)
(+203 files in other folders)
